# saffron-rs

./: Cargo.toml  README.md
src/: main.rs  novel.rs
src/scrappers/: boxnovel.rs  mod.rs
src/utils/: errors.rs  mod.rs  novel.rs  scraper.rs
