[package]
name = "saffron-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.14.0"
tokio = { version = "1.24.1", features = ["macros", "io-util"] }
chrono = "0.4.23"
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"