[package]
name = "saffron-rs"
description = "A web novel scrapper."
readme = "README.md"
repository = "https://github.com/Mytsu/saffron-rs.git"
license = "MIT"
keywords = ["novel", "webnovel", "scrapper", "wuxia", "xianxia"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
authors = ["Mytsu <tlc.jooker@gmail.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.14.0"
tokio = { version = "1.24.1", features = ["macros", "io-util"] }
chrono = "0.4.23"
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive"] }
